// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displayModel renders 0 1`] = `
Array [
  .c0 {
  display-model: 0;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: 0;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: 0;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`displayModel renders function 1`] = `
Array [
  .c0 {
  display-model: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: has;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: has;
}

<div
    className="c0"
  />,
]
`;

exports[`displayModel renders invalid theme path 1`] = `
Array [
  .c0 {
  display-model: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`displayModel renders negative number 1`] = `
Array [
  .c0 {
  display-model: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`displayModel renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  display-model: July;
}

@media screen and (min-width:November) {
  .c0 {
    display-model: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-model: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-model: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-model: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  display-model: July;
}

@media screen and (min-width:November) {
  .c0 {
    display-model: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-model: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-model: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-model: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  display-model: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    display-model: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-model: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-model: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-model: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  display-model: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    display-model: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-model: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-model: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-model: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`displayModel renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    display-model: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-model: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-model: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-model: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    display-model: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-model: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-model: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-model: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    display-model: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-model: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-model: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-model: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    display-model: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-model: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-model: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-model: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`displayModel renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  display-model: July;
}

@media May {
  .c0 {
    display-model: August;
  }
}

@media April {
  .c0 {
    display-model: September;
  }
}

@media January {
  .c0 {
    display-model: November;
  }
}

@media April {
  .c0 {
    display-model: August;
  }
}

@media June {
  .c0 {
    display-model: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  display-model: July;
}

@media May {
  .c0 {
    display-model: August;
  }
}

@media April {
  .c0 {
    display-model: September;
  }
}

@media January {
  .c0 {
    display-model: November;
  }
}

@media April {
  .c0 {
    display-model: August;
  }
}

@media June {
  .c0 {
    display-model: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  display-model: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    display-model: November;
  }
}

@media April {
  .c0 {
    display-model: January;
  }
}

@media January {
  .c0 {
    display-model: December;
  }
}

@media April {
  .c0 {
    display-model: April;
  }
}

@media June {
  .c0 {
    display-model: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  display-model: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    display-model: November;
  }
}

@media April {
  .c0 {
    display-model: January;
  }
}

@media January {
  .c0 {
    display-model: December;
  }
}

@media April {
  .c0 {
    display-model: April;
  }
}

@media June {
  .c0 {
    display-model: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`displayModel renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    display-model: July;
  }
}

@media April {
  .c0 {
    display-model: August;
  }
}

@media January {
  .c0 {
    display-model: September;
  }
}

@media April {
  .c0 {
    display-model: November;
  }
}

@media June {
  .c0 {
    display-model: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    display-model: July;
  }
}

@media April {
  .c0 {
    display-model: August;
  }
}

@media January {
  .c0 {
    display-model: September;
  }
}

@media April {
  .c0 {
    display-model: November;
  }
}

@media June {
  .c0 {
    display-model: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    display-model: January;
  }
}

@media April {
  .c0 {
    display-model: December;
  }
}

@media January {
  .c0 {
    display-model: April;
  }
}

@media April {
  .c0 {
    display-model: May;
  }
}

@media June {
  .c0 {
    display-model: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    display-model: January;
  }
}

@media April {
  .c0 {
    display-model: December;
  }
}

@media January {
  .c0 {
    display-model: April;
  }
}

@media April {
  .c0 {
    display-model: May;
  }
}

@media June {
  .c0 {
    display-model: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`displayModel renders postitive number 1`] = `
Array [
  .c0 {
  display-model: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`displayModel renders string 1`] = `
Array [
  .c0 {
  display-model: July;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: July;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: June;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: June;
}

<div
    className="c0"
  />,
]
`;

exports[`displayModel renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`displayModel renders valid theme path 1`] = `
Array [
  .c0 {
  display-model: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  display-model: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
